--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="css\styles.css" rel="stylesheet"/> 
   </head>
   <body>
     <header>
@@ -34,8 +35,8 @@
     </header>
     <main>
         <div class="container">
-            <div class="row">
-                <div class="col">
+            <div class="row g-0">
+                <div class="col col-12 col-sm-6 col-lg-4 g-4">
                     <div class="card">
                         <img src="assets\curso_1.jpg" alt="" class="card-img-top">
                         <div class="card-body">
@@ -45,21 +46,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col-12 col-sm-6 col-lg-4 g-4">
                     <div class="card">
-                        <img src="assets\curso_1.jpg" alt="" class="card-img-top">
+                        <img src="assets\curso_2.jpg" alt="" class="card-img-top">
                         <div class="card-body">
-                            <h4 class="card-title">Curso 1</h4>
+                            <h4 class="card-title">Curso 2</h4>
                             <p class="card-text">descripcion del curso</p>
                             <a href="#" class="btn btn-success">Mas detalles</a>
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col col-12 col-sm-6 col-lg-4 g-4">
                     <div class="card">
-                        <img src="assets\curso_1.jpg" alt="" class="card-img-top">
+                        <img src="assets\curso_3.jpg" alt="" class="card-img-top">
                         <div class="card-body">
-                            <h4 class="card-title">Curso 1</h4>
+                            <h4 class="card-title">Curso 3</h4>
                             <p class="card-text">descripcion del curso</p>
                             <a href="#" class="btn btn-success">Mas detalles</a>
                         </div>
