--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav" >
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cursos</a>
+                            <a class="nav-link active" href="#">Cursos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Notas</a>
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <main>
-        <div class="container">
+        <div class="container cursos">
             <div class="row g-0">
                 <div class="col col-12 col-sm-6 col-lg-4 g-4">
                     <div class="card">
@@ -67,7 +67,18 @@
                     </div>
                 </div>
             </div>
-        </div>   
+        </div> 
+        <br>
+        <div class="container" >
+            <div class="card">
+                <img src="assets/curso_4.jpg" alt="" class="card-img-top">
+                <div class="card-body">
+                    <h4 class="card-title">Inscripciones Abiertas</h4>
+                    <p class="card-text">Descripción de las fechas</p>
+                    <button class="btn btn-primary ">Inscribirme</button>
+                </div>
+            </div>
+        </div>  
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
